--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,10 @@
       "dependsOn": ["^build"],
       "outputs": ["node_modules/.cache/tsbuildinfo.json", "dist/**"]
     },
+    "start": {
+      "cache": false,
+      "persistent": false
+    },
     "dev": {
       "cache": false,
       "persistent": false
