--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,6 +24,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.9.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.1",
     "pg": "^8.12.0",
