--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,11 +13,12 @@
   },
   "scripts": {
     "clean": "rm -rf .turbo node_modules dist",
+    "db:export": "tsx scripts/export.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:reset": "tsx src/reset-sequences.ts",
-    "db:seed": "tsx src/seed.ts",
+    "db:reset": "tsx scripts/reset-sequences.ts",
+    "db:seed": "tsx scripts/seed.ts",
     "db:studio": "drizzle-kit studio",
     "lint": "eslint .",
     "test": "vitest",
@@ -26,7 +27,7 @@
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.32.1",
+    "drizzle-orm": "^0.32.2",
     "pg": "^8.12.0",
     "postgres": "^3.4.4"
   },
@@ -34,13 +35,13 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/validators": "workspace:*",
-    "@types/node": "^22.0.0",
+    "@types/node": "^22.1.0",
     "@types/pg": "^8.11.6",
-    "drizzle-kit": "^0.23.1",
+    "drizzle-kit": "^0.23.2",
     "eslint": "^9.8.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
-    "tsx": "^4.16.3",
+    "tsx": "^4.16.5",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.5"
