moved form schemas to validators

--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -8,6 +8,7 @@
   "type": "module",
   "exports": {
     "./*": "./src/schemas/*.ts",
+    "./forms/*": "./src/forms/*.ts",
     "./types": "./src/types.ts"
   },
   "scripts": {
