--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "v": "pnpm -v"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@turbo/gen": "^2.1.1",
+    "@types/aws-lambda": "8.10.145",
+    "commitizen": "^4.3.1",
+    "commitlint": "^19.5.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.9.1",
+    "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "turbo": "^2.1.1",
