--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,27 +13,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.682.0",
+    "@aws-sdk/client-sesv2": "^3.684.0",
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/validators": "workspace:*",
     "@trpc/server": "11.0.0-rc.467",
-    "@types/nodemailer": "^6.4.16",
-    "bcrypt": "^5.1.1",
-    "jose": "^5.9.6",
-    "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.8.5",
-    "eslint": "^9.13.0",
+    "@types/node": "^22.9.0",
+    "eslint": "^9.14.0",
     "tsc-alias": "^1.8.10",
     "typescript": "^5.6.3",
-    "vite-tsconfig-paths": "^5.0.1",
+    "vite-tsconfig-paths": "^5.1.0",
     "vitest": "^2.1.4"
   }
 }
