--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,21 +14,17 @@
   "scripts": {
     "clean": "rm -rf .turbo node_modules dist",
     "db": "sst shell drizzle-kit",
-    "db:export": "tsx scripts/export.ts",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:reset": "tsx scripts/reset-sequences.ts",
-    "db:seed": "tsx scripts/seed.ts",
-    "db:studio": "drizzle-kit studio",
     "lint": "eslint .",
+    "reset": "sst shell tsx ./scripts/reset-sequences.ts",
+    "seed": "sst shell tsx ./scripts/seed.ts",
     "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "wipe": "sst shell tsx ./scripts/wipe-database.ts"
   },
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.36.0",
     "pg": "^8.13.1",
     "postgres": "^3.4.5"
   },
@@ -36,16 +32,16 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/validators": "workspace:*",
-    "@types/node": "^22.8.5",
+    "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
-    "drizzle-kit": "^0.24.2",
-    "eslint": "^9.13.0",
-    "sst": "^3.2.70",
+    "drizzle-kit": "^0.27.1",
+    "eslint": "^9.14.0",
+    "sst": "3.2.76",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "vite-tsconfig-paths": "^5.0.1",
+    "vite-tsconfig-paths": "^5.1.0",
     "vitest": "^2.1.4"
   }
 }
