--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -8,6 +8,6 @@
   "tsc-alias": {
     "resolveFullPaths": true
   },
-  "include": ["src"],
+  "include": ["src", "sst-env.d.ts"],
   "exclude": ["node_modules"]
 }
