--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .turbo node_modules dist .next",
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev ",
     "lint": "eslint .",
     "start": "next start"
   },
@@ -24,7 +24,7 @@
     "@trpc/server": "11.0.0-rc.467",
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.4.0",
-    "bcrypt": "^5.1.1",
+    "cookie": "^1.0.1",
     "date-fns": "^3.6.0",
     "geist": "^1.3.1",
     "next": "^14.2.17",
