--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,11 +18,13 @@
     "@repo/db": "workspace:*",
     "@repo/validators": "workspace:*",
     "@trpc/server": "11.0.0-rc.467",
+    "cookie": "^1.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/cookie": "^1.0.0",
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "tsc-alias": "^1.8.10",
