--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .turbo node_modules dist .next",
-    "dev": "NODE_OPTIONS='--inspect' next dev ",
+    "dev": "next dev",
     "lint": "eslint .",
     "start": "next start"
   },
