--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -35,6 +35,7 @@
     "recharts": "^2.13.3",
     "server-only": "^0.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
   },
@@ -47,6 +48,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
-  },
-  "packageManager": "pnpm@9.5.0"
+  }
 }
