chore: updated sst and drizzle-kit

--- a/tooling/typescript/package.json
+++ b/tooling/typescript/package.json
@@ -6,5 +6,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "devDependencies": {}
+    "dependencies": {
+        "sst": "^3.3.19"
+    }
 }
