--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@node-rs/argon2": "^2.0.0",
-    "drizzle-kit": "0.27.0"
+    "drizzle-kit": "0.28.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -30,7 +30,7 @@
     "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "sst": "3.3.11",
+    "sst": "^3.3.19",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3"
   },
