--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,18 +13,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.685.0",
     "@aws-sdk/client-sesv2": "^3.684.0",
+    "@aws-sdk/s3-request-presigner": "^3.689.0",
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/validators": "workspace:*",
     "@trpc/server": "11.0.0-rc.467",
     "cookie": "^1.0.1",
+    "sst": "^3.3.19",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/cookie": "^1.0.0",
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "tsc-alias": "^1.8.10",
