--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -61,6 +61,7 @@
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
+    "sst": "^3.3.19",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
