--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -20,6 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "sst": "^3.3.19",
     "zod": "^3.23.8"
   },
   "devDependencies": {
