--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -23,5 +23,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.12.0",
     "typescript-eslint": "^8.13.0"
+  },
+  "dependencies": {
+    "sst": "^3.3.19"
   }
 }
