fix: temporary disable exactOptionalPropertyTypes until zod v4 fixes partial(). More info: https://github.com/colinhacks/zod/issues/635

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "declaration": false,
     "declarationMap": false,
+    "exactOptionalPropertyTypes": false,
     "outDir": "dist",
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
