--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -6,35 +6,35 @@
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .turbo node_modules dist .next",
-    "dev": "NODE_OPTIONS='--inspect' next dev ",
+    "dev": "next dev ",
     "lint": "eslint .",
     "start": "next start"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
-    "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/client-s3": "^3.698.0",
     "@repo/api": "workspace:^",
     "@repo/auth": "workspace:^",
     "@repo/ui": "workspace:^",
     "@repo/validators": "workspace:^",
-    "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-query": "^5.61.0",
     "@tanstack/react-table": "^8.20.5",
     "@trpc/client": "11.0.0-rc.467",
     "@trpc/react-query": "11.0.0-rc.467",
     "@trpc/server": "11.0.0-rc.467",
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.4.0",
-    "cookie": "^1.0.1",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "geist": "^1.3.1",
     "next": "^14.2.18",
     "next-themes": "^0.4.3",
-    "nuqs": "^2.2.1",
+    "nuqs": "^2.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.13.3",
     "server-only": "^0.0.1",
-    "sst": "^3.3.22",
+    "sst": "^3.3.27",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.1",
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.15.0",
