--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "sst dev",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint",
+    "prepare": "husky",
     "start": "turbo start",
     "typecheck": "turbo typecheck"
   },
@@ -31,7 +32,7 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "sst": "^3.3.28",
     "turbo": "^2.3.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
