--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .turbo node_modules dist .next",
-    "dev": "next dev ",
+    "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
