--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -30,14 +30,14 @@
     }
   },
   "include": [
-    ".eslintrc.cjs",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
     "**/*.js",
     ".next/types/**/*.ts",
-    "sst-env.d.ts"
+    "sst-env.d.ts",
+    "../../packages/ui/src/tanstack-table.d.ts"
   ],
   "exclude": ["node_modules"]
 }
