--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "clean": "rm -rf .turbo node_modules dist",
     "lint": "eslint .",
-    "test": "vitest"
+    "test": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@node-rs/argon2": "^2.0.0",
