--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -10,6 +10,6 @@
   "tsc-alias": {
     "resolveFullPaths": true
   },
-  "include": ["src", "sst-env.d.ts"],
+  "include": ["src", "sst-env.d.ts", "src/tanstack-table.ts"],
   "exclude": ["node_modules"]
 }
