--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "clean": "rm -rf .turbo node_modules dist .next",
+    "clean": "rm -rf .turbo node_modules dist .next .open-next",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
+    "test": "vitest",
+    "test:e2e": "playwright test",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -38,17 +40,20 @@
     "sst": "^3.3.28",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.0",
     "@repo/eslint-config": "workspace:*",
     "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.15.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.5"
   }
 }
