--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "turbo lint",
     "prepare": "husky",
     "start": "turbo start",
+    "test": "sst shell -- pnpm vitest",
+    "test:e2e": "sst shell -- pnpm -F nextjs test:e2e",
     "typecheck": "turbo typecheck"
   },
   "dependencies": {
@@ -21,7 +23,6 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
-    "@turbo/gen": "^2.3.1",
     "@types/aws-lambda": "8.10.145",
     "commitizen": "^4.3.1",
     "commitlint": "^19.6.0",
@@ -32,7 +33,8 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "sst": "^3.3.28",
     "turbo": "^2.3.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.5"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
