--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -7,6 +7,6 @@
   "tsc-alias": {
     "resolveFullPaths": true
   },
-  "include": ["src", "sst-env.d.ts", "vitest.config.ts"],
+  "include": ["src", "sst-env.d.ts", "*.config.ts", "vitest.config.ts"],
   "exclude": ["node_modules"]
 }
