--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
       "cache": false,
       "persistent": true
     },
+    "test": {
+      "cache": false,
+      "persistent": true
+    },
     "format": {
       "outputs": ["node_modules/.cache/.prettiercache"],
       "outputLogs": "new-only"
