--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -51,6 +51,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.15.0",
     "postcss": "^8.4.49",
+    "postcss-load-config": "^6.0.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.3",
