--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,10 @@ yarn-error.log*
 .pnpm-debug.log*
 sst-env.d.ts
 # local env files
-# do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
+# do not commit any .env files to git, except for the .env.example file. 
 .env
-.env*.local
+.env.*
+!.env.example
 
 # vercel
 .vercel
@@ -58,3 +59,4 @@ test-results/
 playwright-report/
 blob-report/
 playwright/.cache/
+.auth/
