--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@repo/typescript-config/internal-package.json",
   "compilerOptions": {
+    "rootDir": ".",
     "outDir": "dist",
     "lib": ["dom", "dom.iterable", "ES2022"],
     "jsx": "preserve",
