--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -43,6 +43,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@playwright/test": "^1.49.0",
     "@repo/eslint-config": "workspace:*",
     "@types/node": "^22.9.3",
