--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:seed": "sst shell -- pnpm -F db db:seed",
     "db:wipe": "sst shell -- pnpm -F db db:wipe",
     "dev": "sst shell -- pnpm -F nextjs dev",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{js, jsx, ts,tsx,md}\"",
     "lint": "turbo lint",
     "prepare": "husky",
     "start": "turbo start",
@@ -30,6 +30,7 @@
     "drizzle-kit": "0.28.1",
     "eslint": "^9.15.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "sst": "^3.3.28",
