--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -33,8 +33,7 @@
     "next-env.d.ts",
     "src",
     "tests",
-    "*.config.ts",
-    "*.config.js",
+    "*.config.*",
     ".next/types/**/*.ts",
     "sst-env.d.ts",
     "../../packages/ui/src/tanstack-table.d.ts"
