--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -9,5 +9,5 @@
     "resolveFullPaths": true
   },
   "include": ["src", "*.config.*", "sst-env.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "eslint.config.js"]
 }
