--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -11,5 +11,5 @@
     "resolveFullPaths": true
   },
   "include": ["src", "*.config.*", "sst-env.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "eslint.config.js"]
 }
