--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -8,5 +8,5 @@
     "resolveFullPaths": true
   },
   "include": ["src", "scripts", "*.config.*", "sst-env.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "eslint.config.js"]
 }
