--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:seed": "sst shell -- pnpm -F db db:seed",
     "db:wipe": "sst shell -- pnpm -F db db:wipe",
     "dev": "sst shell -- pnpm -F nextjs dev",
-    "format": "prettier --write \"**/*.{js, jsx, ts,tsx,md}\"",
+    "format": "prettier . --write",
     "lint": "turbo lint",
     "prepare": "husky",
     "start": "turbo start",
