--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "semantic-release": "^24.2.0",
     "sst": "^3.3.28",
     "turbo": "^2.3.1",
     "typescript": "^5.7.2",
