--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "extends": "@repo/typescript-config/internal-package.json",
   "compilerOptions": {
+    "rootDir": ".",
     "outDir": "dist",
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
   "tsc-alias": {
     "resolveFullPaths": true
   },
-  "include": ["src", "*.config.ts", "sst-env.d.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src", "*.config.*", "sst-env.d.ts"],
+  "exclude": ["node_modules", "eslint.config.js"]
 }
