--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Versioning
 on:
   push:
     branches:
-      - main
+      - main, ci/test
 
 jobs:
-  cd:
+  release:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     env:
@@ -31,5 +31,5 @@ jobs:
 
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: pnpm dlx semantic-release
