--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -3,7 +3,7 @@ name: Versioning
 on:
   push:
     branches:
-      - main
+      - ci/test
 
 jobs:
   release:
@@ -25,4 +25,4 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+        run: pnpm dlx semantic-release --dry-run
