ci: added ci/cd workflows

--- a/.github/workflows/versioning-test.yml
+++ b/.github/workflows/versioning-test.yml
@@ -1,4 +1,4 @@
-name: Testing CI
+name: Testing versioning
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - ci/test
 
 jobs:
-  release:
+  release-test:
     permissions:
       contents: write
 
