--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,12 +1,12 @@
-name: Versioning
+name: CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "v*"
 
 jobs:
-  cd:
+  deploy:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     env:
@@ -29,7 +29,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
-        run: pnpm dlx semantic-release
+      - name: Deploy
+        run: pnpm sst deploy --stage production
