--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
     "@aws-sdk/client-s3": "^3.701.0",
+    "@highlight-run/next": "^7.6.10",
+    "@highlight-run/node": "^3.10.1",
     "@repo/api": "workspace:^",
     "@repo/auth": "workspace:^",
     "@repo/ui": "workspace:^",
