chore: add drizzle-seed

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^22.10.0",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.28.1",
+    "drizzle-seed": "^0.1.2",
     "eslint": "^9.15.0",
     "sst": "3.3.30",
     "ts-node": "^10.9.2",
