refactor: changed wipe database to reset database

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "clean": "turbo clean && rm -rf .turbo node_modules .sst",
     "commitlint": "commitlint --edit",
     "db": "sst shell drizzle-kit",
+    "db:reset": "sst shell -- pnpm -F db db:reset",
     "db:seed": "sst shell -- pnpm -F db db:seed",
-    "db:wipe": "sst shell -- pnpm -F db db:wipe",
     "dev": "sst shell -- pnpm -F nextjs dev",
     "format": "prettier . --write",
     "lint": "turbo lint",
