--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "clean": "rm -rf .turbo node_modules dist",
+    "db:reset": "tsx ./scripts/reset-database.ts",
     "db:seed": "tsx ./scripts/seed-database.ts",
-    "db:wipe": "tsx ./scripts/wipe-database.ts",
     "lint": "eslint .",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
