--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "turbo lint",
     "prepare": "husky",
     "start": "turbo start",
-    "test": "sst shell -- pnpm vitest run",
+    "test": "pnpm vitest run",
     "test:e2e": "sst shell -- pnpm -F nextjs test:e2e",
     "typecheck": "turbo typecheck"
   },
@@ -38,6 +38,7 @@
     "sst": "^3.3.30",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2",
+    "vite": "^6.0.1",
     "vitest": "^2.1.6"
   },
   "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
