--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,7 @@ jobs:
     if: github.event.action != 'closed'
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -37,16 +35,14 @@ jobs:
       - name: Test
         id: test
         run: pnpm run test
-
-      - name: Upload log file if tests fail
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: sst-log.log
-          path: "./.sst/log/sst.log"
+        env:
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
       - name: Deploy
         run: pnpm sst deploy --stage pr-${{ github.event.number }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Wait for deployment to finish
         run: pnpm run db migrate --stage pr-${{ github.event.number }}
