--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
 
       - name: Wait for deployment to finish
         run: pnpm run db migrate --stage pr-${{ github.event.number }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   remove:
     if: github.event.action == 'closed' && github.event.pull_request.merged == true
@@ -64,3 +67,6 @@ jobs:
 
       - name: Remove
         run: pnpm sst remove --stage pr-${{ github.event.number }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
