--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,13 +12,15 @@
   },
   "scripts": {
     "clean": "rm -rf .turbo node_modules dist",
+    "db:migrate": "tsx ./scripts/invoke-migration.ts",
     "db:reset": "tsx ./scripts/reset-database.ts",
-    "db:seed": "tsx ./scripts/seed-database.ts",
+    "db:seed": "tsx ./scripts/invoke-seed.ts",
     "lint": "eslint .",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.699.0",
     "drizzle-orm": "^0.36.4",
     "pg": "^8.13.1"
   },
