ci: cachine of nextjs and pnpm store

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "turbo clean && rm -rf .turbo node_modules .sst",
     "commitlint": "commitlint --edit",
     "db": "sst shell drizzle-kit",
-    "db:migrate": "sst shell -- pnpm -F db db:migrate",
+    "db:migrate": "sst shell --print-logs -- pnpm -F db db:migrate",
     "db:reset": "sst shell -- pnpm -F db db:reset",
-    "db:seed": "sst shell -- pnpm -F db db:seed",
+    "db:seed": "sst shell --print-logs -- pnpm -F db db:seed",
     "dev": "sst shell -- pnpm -F nextjs dev",
     "format": "prettier . --write",
     "lint": "turbo lint",
