fix: migration strategy (#45)
* build: remove jwt secret

* chore: add drizzle-seed

* refactor: docker container doesn't work on new setup

* build: add seed db script

* refactor: use drizzle-seed to clean db

* ci: run migration step after deploying

* chore: removed unused publicUserColumns

* refactor: changed wipe database to reset database

* refactor: deleted unused file

* refactor: deleted unused file

* style: sorted schemas and removed IIFE from seed database script

* refactor: metadata columns and schema definitions

seperated meta data columns to timestamps and auditing
changed remaining schema definitions to non deprecated methods

* refactor: added drizzle relations

* refactor: audit constraints and drizzle relations

seperated logic for auditing column foreign key constraints
fixed typos in drizzle relations

* refactor: drizzle-seed not working for cyclical relations

* refactor: missed reference to JWT_SECRET Resource

* refactor: dev database is now simplified and handled by docker outside of sst

* build: generated first migration for drizzle

* refactor: differentiated between relaxed auditing of certain tables and strict auditing of others

* build: generated first migration

* build: created initial seed data for fresh databases

* ci: upload sst log on failure

* ci: fix last commit

* ci: another attempt at getting sst logs

* ci: test step no longer requires sst for env variables

* ci: add env variable to test step

* ci: stopped all stages from creating an email except production

* fix: missing use client directive causing nextjs not to build

* fix: highlight.io telemetry conflicting with openNext build process

- disabled highlight.io telemetry in middleware as it causes openNext to fail the build step
- deleted nextjs middleware for time being

* ci: aws router domain and pnpm action version

AWS router only has a domain on production to avoid conflicts with different stages
pnpm github action upgraded to v4

* ci: add JWT_SECRET a

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,9 +9,6 @@ jobs:
   deploy:
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     steps:
       - name: Check out code
@@ -31,3 +28,14 @@ jobs:
 
       - name: Deploy
         run: pnpm sst deploy --stage production
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          NEXT_PUBLIC_HIGHLIGHT_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_HIGHLIGHT_PROJECT_ID }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+
+      - name: Migrate Database
+        run: pnpm sst shell --stage production -- pnpm -F db db:migrate
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
