--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "turbo build",
+    "build": "sst shell -- pnpm -F nextjs build",
     "clean": "turbo clean && rm -rf .turbo node_modules .sst",
     "commitlint": "commitlint --edit",
     "db": "sst shell drizzle-kit",
+    "db:migrate": "sst shell -- pnpm -F db db:migrate",
+    "db:reset": "sst shell -- pnpm -F db db:reset",
     "db:seed": "sst shell -- pnpm -F db db:seed",
-    "db:wipe": "sst shell -- pnpm -F db db:wipe",
     "dev": "sst shell -- pnpm -F nextjs dev",
     "format": "prettier . --write",
     "lint": "turbo lint",
     "prepare": "husky",
-    "start": "turbo start",
-    "test": "sst shell -- pnpm vitest run",
+    "start": "sst shell -- pnpm -F nextjs start",
+    "test": "pnpm vitest run",
     "test:e2e": "sst shell -- pnpm -F nextjs test:e2e",
     "typecheck": "turbo typecheck"
   },
@@ -38,6 +39,7 @@
     "sst": "^3.3.30",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2",
+    "vite": "^6.0.1",
     "vitest": "^2.1.6"
   },
   "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
