--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,13 +12,15 @@
   },
   "scripts": {
     "clean": "rm -rf .turbo node_modules dist",
-    "db:seed": "tsx ./scripts/seed-database.ts",
-    "db:wipe": "tsx ./scripts/wipe-database.ts",
+    "db:migrate": "tsx ./scripts/invoke-migration.ts",
+    "db:reset": "tsx ./scripts/reset-database.ts",
+    "db:seed": "tsx ./scripts/invoke-seed.ts",
     "lint": "eslint .",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.699.0",
     "drizzle-orm": "^0.36.4",
     "pg": "^8.13.1"
   },
@@ -29,6 +31,7 @@
     "@types/node": "^22.10.0",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.28.1",
+    "drizzle-seed": "^0.1.2",
     "eslint": "^9.15.0",
     "sst": "3.3.30",
     "ts-node": "^10.9.2",
