--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,12 +1,16 @@
-name: CD Pipeline
+name: Versioning
 
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - main
+      - ci/test
 
 jobs:
-  deploy:
+  release:
+    permissions:
+      contents: write
+
     timeout-minutes: 15
     runs-on: ubuntu-latest
 
@@ -15,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v3
+        uses: pnpm/action-setup@v4
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
@@ -26,7 +30,18 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Release
+        id: release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          dry_run: ${{ github.ref_name == 'ci/test' }}
+
+      - run: echo ${{ steps.semantic.outputs.new_release_version }}
+
       - name: Deploy
+        if: steps.semantic.outputs.new_release_published == 'true'
         run: pnpm sst deploy --stage production
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -35,6 +50,7 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
       - name: Migrate Database
+        if: steps.semantic.outputs.new_release_published == 'true'
         run: pnpm sst shell --stage production -- pnpm -F db db:migrate
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
