docs: update readme and general docs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-POSTGRES_PASSWORD="password"
-POSTGRES_USERNAME="postgres"
-POSTGRES_DATABASE="database"
-POSTGRES_PORT=5432
+DEV_POSTGRES_USER="michael"
+DEV_POSTGRES_PASSWORD="password"
+DEV_POSTGRES_DB="workshop-repairs"
+DEV_POSTGRES_HOST="localhost"
+DEV_POSTGRES_PORT=5432
+
+TEST_USER_EMAIL = "michael.poulgrain@gmail.com"
+TEST_USER_PASSWORD = "password"
+JWT_SECRET = "JWT_SECRET"
+NEXT_PUBLIC_URL = "http://localhost:3000"
+NEXT_PUBLIC_HIGHLIGHT_PROJECT_ID = "HIGHLIGHTIO"
