--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,8 @@
     "db:migrate": "tsx ./scripts/invoke-migration.ts",
     "db:reset": "tsx ./scripts/reset-database.ts",
     "db:seed": "tsx ./scripts/invoke-seed.ts",
+    "dbml:generate": "tsx ./scripts/create-dbml.ts",
+    "dbml:render": "dbml-renderer -i schema.dbml -o schema.svg",
     "lint": "eslint .",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
@@ -28,8 +30,10 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/validators": "workspace:*",
+    "@softwaretechnik/dbml-renderer": "^1.0.30",
     "@types/node": "^22.10.0",
     "@types/pg": "^8.11.10",
+    "drizzle-dbml-generator": "^0.9.0",
     "drizzle-kit": "^0.28.1",
     "drizzle-seed": "^0.1.2",
     "eslint": "^9.15.0",
