feat: add seed data for staging

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DEV_POSTGRES_DB="workshop-repairs"
 DEV_POSTGRES_HOST="localhost"
 DEV_POSTGRES_PORT=5432
 
-TEST_USER_EMAIL = "michael.poulgrain@gmail.com"
+TEST_USER_EMAIL = "email@example.com"
 TEST_USER_PASSWORD = "password"
 JWT_SECRET = "JWT_SECRET"
 NEXT_PUBLIC_URL = "http://localhost:3000"
