--- a/apps/e2e/tsconfig.json
+++ b/apps/e2e/tsconfig.json
@@ -35,9 +35,7 @@
     "tests",
     "*.config.*",
     ".next/types/**/*.ts",
-    "sst-env.d.ts",
-    "../../packages/ui/src/tanstack-table.d.ts",
-    "../e2e/playwright.config.ts"
+    "sst-env.d.ts"
   ],
   "exclude": ["node_modules", "eslint.config.js"]
 }
