--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -36,10 +36,7 @@
     "*.config.*",
     ".next/types/**/*.ts",
     "sst-env.d.ts",
-    "../../packages/ui/src/tanstack-table.d.ts",
-    "../e2e/playwright.config.ts",
-    "../e2e/src/onboarding.e2e.ts",
-    "../e2e/src/public.e2e.ts"
+    "../../packages/ui/src/tanstack-table.d.ts"
   ],
   "exclude": ["node_modules", "eslint.config.js"]
 }
