--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:migrate": "sst shell -- pnpm -F db db:migrate",
     "db:reset": "sst shell -- pnpm -F db db:reset",
     "db:seed": "sst shell -- pnpm -F db db:seed",
+    "db:sequence": "sst shell -- pnpm -F db db:sequence",
     "dev": "sst shell -- pnpm -F nextjs dev",
     "format": "prettier . --write",
     "lint": "turbo lint",
